# modmail_bot

./: .gitignore  Cargo.toml  README.md
migrations/: 20220419205750_base.sql
src/: error.rs  lib.rs  main.rs
src/database/: config.rs  mod.rs  rooms.rs
